--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,7 +5,7 @@
     /* position: fixed;
     width: 100%; */
 
-    font-size: 1.3em;
+    font-size: 1.25em;
 }
 
 #normal {
@@ -36,11 +36,15 @@
     text-align: center;
 }
 
+#links a:hover {
+    
+}
+
 #contact {
     margin-inline: 5em 0;
     padding: 0.5em 1em;
     border: 1px solid var(--color1);
-    border-radius: 1em;
+    border-radius: 0.25em;
 }
 
 #responsive {
