--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -1,5 +1,5 @@
 /* For debugging only */
-/* * { outline: 1px solid #e6e3db; }    */
+/* * { outline: 1px solid #e6e3db; } */
 
 :root {
   --color1: silver; 
@@ -10,8 +10,8 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
-  src: url('/fonts/VarelaRound-Regular.ttf') format('ttf');
+  font-family: 'Montserrat';
+  src: url("/fonts/Montserrat-Regular.ttf") format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -21,7 +21,7 @@ body {
   background-color: var(--white);
   letter-spacing: 0.2px;
   margin: 0;
-  font-family: "Roboto";
+  font-family: "Montserrat", sans-serif;
 } 
 
 a {
