--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -17,11 +17,16 @@
   font-display: swap;
 }
 
+html {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1em;
+}
+
 body {
   background-color: var(--white);
   letter-spacing: 0.2px;
   margin: 0;
-  font-family: "Montserrat", sans-serif;
+  
 } 
 
 a {
