--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     
-    margin: 1em 1.5em;
+    margin: 1em 3em;
     align-items: center;
 }
 
@@ -90,9 +90,11 @@
         animation-fill-mode: forwards;
     }
     #responsive a {
+        position: relative;
         background-color: var(--white);
-        padding: 1em;
-        text-align: center;
+        padding: 0.5em;
+        padding-inline-end: 1.5em;
+        text-align: right;
         animation: fromLeft 0.4s ease-in;
         animation-fill-mode: backwards;
     }
