--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -36,9 +36,9 @@
         </div>
     
         <div id="links">
-            <a href="/">About</a>
+            <a href="/">Home</a>
             <a href="/projects">Projects</a>
-            <a href="/">Services</a>   
+            <a href="/">About</a>
             <a id="contact" href="/contact">Contact</a>
         </div>
     
@@ -47,9 +47,9 @@
         </div>
     </div>
     <div id="responsive" class="hide">
-        <a href="/">About</a>
+        <a href="/">Home</a>
         <a href="/projects">Projects</a>
-        <a href="/">Services</a>   
+        <a href="/">About</a>
         <a href="/contact">Contact</a>
     </div>
 
