--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -18,10 +18,11 @@ import * as myProfile from '@content/profile/text.md';
             <p>Frontend Web Developer</p>
             <p>I design and develop simple but elegant websites. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="links">
-                <a class="primary" href="/">Contact</a>
-                <a class="tertiary" href="/">About Me</a>
+                <a class="primary" href="/">My Projects</a>
+                <a class="tertiary" href="/">Contact</a>
             </div>
             <div class="socials">
+                <!-- <div>Follow Me: </div> -->
                 <div>
                     <a href="/">
                         <Image src={social1} alt="Social" />
