--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -17,9 +17,16 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Roboto';
+  src: url("/fonts/Roboto-Regular.ttf") format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 html {
-  font-family: "Montserrat", sans-serif;
-  font-size: 1em;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
