--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,5 +1,7 @@
 .page {
     height: 100vh;
+    margin-inline: 1em;
+    font-size: 1.25em;
 }
 
 .container {
@@ -7,7 +9,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 80%;
+    height: 85%;
+    gap: 1em;
 
     animation: fadeInFromLeft ease-in 0.5s;
     animation-iteration-count: 1;
@@ -82,6 +85,7 @@
 }
 
 .socials {
+    margin-top: 0.5em;
     display: flex;
     justify-content: flex-end;
 }
