--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -46,11 +46,14 @@
             <input id="checkbox" type="checkbox" />
         </div>
     </div>
-    <div id="responsive" class="hide">
-        <a href="/">Home</a>
-        <a href="/projects">Projects</a>
-        <a href="/">About</a>
-        <a href="/contact">Contact</a>
+    <div class="container">
+        <div id="responsive" class="hide">
+            <a href="/">Home</a>
+            <a href="/projects">Projects</a>
+            <a href="/">About</a>
+            <a href="/contact">Contact</a>
+        </div>
     </div>
+    
 
 </div>
