--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -62,10 +62,15 @@
         to { transform: translateX(-200%); }
     }
 
-    @keyframes containerAnimation {     
-        0% {  opacity: 0; }     
+    @keyframes containerInitAnimation {     
+        0% {  opacity: 0; pointer-events: none; }     
         99% {  opacity: 0; }     
-        100% { opacity: 1; } 
+        100% { opacity: 1; pointer-events: all; } 
+    }
+
+    @keyframes containerHideAnimation {
+        from { display: flex; }
+        to { display: none; }
     }
 
     #links {
@@ -75,18 +80,26 @@
         display: flex !important;
         align-self: center;
     }
+
+    .container {
+        display: block;
+        animation: containerInitAnimation 1s forwards; /* Fixes the toLeft animation playing on page load */
+    }
+
     #responsive {
         position: absolute;
-        width: 100%;
         z-index: 1;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
-
-        animation: containerAnimation 1s forwards; /* Fixes the toLeft animation playing on page load */
+    }
+    #responsive.hide {
+        display: none;
+        animation: containerHideAnimation 0.5s ease-in forwards;
     }
     #responsive.hide a {
-        animation: toLeft 0.3s ease-in, hasHovered 1ms paused;
+        animation: toLeft 0.3s ease-in;
         animation-fill-mode: forwards;
     }
     #responsive a {
