--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,20 +1,27 @@
 .page {
-    height: auto;
+    height: 100vh;
+}
+
+#title {
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .container {
     display: grid;
     grid-template-columns: auto auto auto;
-    gap: 1em;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    grid-gap: 0;
+    padding: 0;
+    margin: 0;
 }
 
 @media only screen and (max-width: 768px) {
-    .container {
+    /* .container {
         display: block;
     }
     .container div {
         margin: 2em auto;
         width: 90%;
-    }
+    } */
 }
