Reworked profile and transferred projects into index

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import '@styles/footer.css';
 
 <div class="footer">
     <div>
-        <p>&copy; Francis Tayag</p>
+        <p>&copy; Francis Tayag. Built with AstroJS.</p>
     </div>
     <div>
         <p>
