--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -36,9 +36,9 @@
         </div>
     
         <div id="links">
-            <a href="/">Home</a>
-            <a href="/projects">Projects</a>
+            <!-- <a href="/">Home</a>
             <a href="/">About</a>
+            <a href="/projects">Projects</a> -->
             <a id="contact" href="/contact">Contact</a>
         </div>
     
@@ -48,9 +48,9 @@
     </div>
     <div class="container">
         <div id="responsive" class="hide">
-            <a href="/">Home</a>
-            <a href="/projects">Projects</a>
+            <!-- <a href="/">Home</a>
             <a href="/">About</a>
+            <a href="/projects">Projects</a> -->
             <a href="/contact">Contact</a>
         </div>
     </div>
