--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,14 +1,17 @@
 ---
 import '@styles/project_card.css';
 
-const { thumbnail, title, description, id } = Astro.props;
+const { thumbnail, title, subtitle, description, id } = Astro.props;
 ---
 
 
 <div class="card">
-    <img src={thumbnail} alt="thumbnail"/>
-    <div id="overlay">
+    <a href={`/projects/${id}`}>
+        <img src={thumbnail} alt="thumbnail"/>
+    </a>
+    <div>
         <h1>{title}</h1>
+        <h2>{subtitle}</h2>
     </div>
     <!-- <div class="card-info">
         <h1>{title}</h1>
