--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -5,8 +5,8 @@
   --color1: silver; 
   --color2: gray; 
   --black: #11113D;
-  --white: #FFFFFF;
-  /* --white: #F6F6F6; */
+  /* --white: #FFFFFF; */
+  --white: #F6F6F6;
 }
 
 @font-face {
@@ -26,15 +26,22 @@
 }
 
 html {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   background-color: var(--white);
   letter-spacing: 0.2px;
-  margin: 0;
-  
+  width: 50vw;
+  margin: 0 auto;
+  font-size: 0.9em;
 } 
+
+@media only screen and (max-width: 768px) {
+  body {
+    width: 95vw;
+  }
+}
 
 a {
   text-decoration: none;
