--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     
-    margin: 1em 3em;
+    margin: 1em 0;
     align-items: center;
 }
 
@@ -88,7 +88,6 @@
 
     #responsive {
         position: absolute;
-        z-index: 1;
         width: 100%;
         display: flex;
         flex-direction: column;
