Rework the projects list

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -15,10 +15,10 @@ import * as myProfile from '@content/profile/text.md';
 <div id="profile">
     <Image src={asideImage} alt="Aside" />
     <div id="basic-info">
-        <h1 class="title line">Francis Tayag</h1>
+        <h1 class="title line larger">Francis Tayag</h1>
         <h2 class="subtitle secondary">Frontend Developer & Designer</h2>
     </div>
-    <div class="socials">
+    <div id="socials">
         <!-- <div>Follow Me: </div> -->
         <a href="/">
             <Image src={social1} alt="Social" />
