--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,15 @@
 import Layout from '@layouts/Layout.astro';
 import Profile from '@components/Profile.astro'
 import '@styles/index.css';
+import Projects from '@components/Projects.astro';
 ---
 
 <Layout title="Francis Tayag">	
 	<Profile />
-	<div class="about-me">
-		<h1>About Me</h1>
+	<div id="about">
+		<h2 class="wg-lighter">About Me</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet nunc quis fringilla semper. Morbi lobortis urna eu purus dapibus ultrices. Sed vehicula massa a fermentum mollis.</p>
-		<h2>Education</h2>
+		<!-- <h2 class="wg-lighter secondary">Education</h2> -->
 	</div>
-	<div id="projects">
-		<h1>Projects</h1>
-	</div>
+	<Projects />
 </Layout>
