--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -4,6 +4,7 @@
 :root {
   --color1: silver; 
   --color2: gray; 
+  --color3: #9bc6ff;
   --black: #11113D;
   /* --white: #FFFFFF; */
   --white: #F6F6F6;
@@ -32,7 +33,7 @@ html {
 body {
   background-color: var(--white);
   letter-spacing: 0.2px;
-  width: 50vw;
+  width: 50em;
   margin: 0 auto;
   font-size: 0.9em;
 } 
@@ -57,7 +58,35 @@ a:hover:not(.logo) {
   color: var(--color1);
 }
 
-/* For navbar */
-/* .sticky + div {
-    padding-top: 3.4rem;  
-} */
+.line {
+  display: flex;
+  align-items: center;
+}
+
+.line::before, .line::after {
+  content: '';
+  margin-inline: 2vmin;
+  flex-grow: 1;
+  border-bottom: 1px solid var(--color1);
+}
+
+.subtitle {
+  margin: 0;
+  font-weight: lighter;
+}
+
+.secondary {
+  color: var(--color2);
+}
+
+.wg-lighter {
+  font-weight: lighter;
+}
+
+.wg-bolder {
+  font-weight: bolder;
+}
+
+.larger {
+  font-size: 2.5em;
+}
