--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,16 +1,13 @@
-.about-me { 
+#about { 
     margin-top: 3em;
     margin: 0 auto;
 }
 
-.about-me h1 {
+#about h1 {
     text-align: left;
 }
 
-.about-me p {
+#about p {
     line-height: 1.5em;
 }
 
-#projects {
-    margin-top: 3em;
-}
