--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -21,46 +21,25 @@
     margin: 0;
 }
 
-.line {
-    display: flex;
-    align-items: center;
-}
-
-.line::before, .line::after {
-    content: '';
-    margin-inline: 2vmin;
-    flex-grow: 1;
-    border-bottom: 1px solid var(--color1);
-}
-
-.subtitle {
-    margin: 0;
-    font-weight: lighter;
-}
-
-.secondary {
-    color: var(--color2);
-}
-
-.socials {
+#socials {
     display: flex;
     justify-content: center;
 }
 
-.socials div:not(:last-child) {
+#socials div:not(:last-child) {
     padding-inline-end: 0.5em;
 }
-.socials a {
+#socials a {
     display: inline;
     float: left;
     margin-inline: 5px;
     transition: opacity 0.2s ease-in;
 }
-.socials a:hover {
+#socials a:hover {
     opacity: 50%;
 }
 
-.socials a img {
+#socials a img {
     display: block;
     width: 2em;
     height: auto;
