Add contact page, and few minor changes

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import asideImage from '@images/placeholder-1.png';
+import profilePicture from '@images/placeholder-1.png';
 import social1 from '@images/linkedin.png';
 import social2 from '@images/behance.png';
 import social3 from '@images/github.png';
@@ -13,7 +13,7 @@ import * as myProfile from '@content/profile/text.md';
 </style>
 
 <div id="profile">
-    <Image src={asideImage} alt="Aside" />
+    <Image src={profilePicture} alt="Profile Picture" />
     <div id="basic-info">
         <h1 class="title line larger">Francis Tayag</h1>
         <h2 class="subtitle secondary">Frontend Developer & Designer</h2>
