--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import '@styles/index.css';
 import Projects from '@components/Projects.astro';
 ---
 
-<Layout title="Francis Tayag">	
+<Layout title="Home">	
 	<Profile />
 	<div id="about">
 		<h2 class="wg-lighter">About Me</h1>
