--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -33,7 +33,7 @@ const { Content } = await entry.render();
 
 ---
 
-<Layout>
+<Layout title={entry.data.title}>
   <div class="project-details">
     <!-- <Slideshow images={project.images} /> -->
 
