--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -23,7 +23,7 @@ import social3 from '@images/github.png';
                     <p class="secondary">{entry.data.years}</p>
                 </div>
                 <div class="list-info">
-                    <h3><a href="">{entry.data.title}</a></h3>
+                    <h3><a href={`/projects/${entry.slug}`}>{entry.data.title}</a></h3>
                     <p>{entry.data.summary}</p>
   
                     <div id="techs">
