Add content for 'About Me'

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -13,7 +13,7 @@ import Socials from './Socials.astro';
     <Image src={profilePicture} alt="Profile Picture" />
     <div id="basic-info">
         <h1 class="title line larger">Francis Tayag</h1>
-        <h2 class="subtitle secondary">Frontend Developer & Illustrator</h2>
+        <h2 class="subtitle secondary">Frontend Developer</h2>
     </div>
     <Socials />
 </div>
