--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,18 @@ import '@styles/index.css';
 import Projects from '@components/Projects.astro';
 ---
 
-<Layout title="Home">	
+<Layout title="Francis Tayag">	
 	<Profile />
 	<div id="about">
 		<h2 class="wg-lighter">About Me</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet nunc quis fringilla semper. Morbi lobortis urna eu purus dapibus ultrices. Sed vehicula massa a fermentum mollis.</p>
+		<p class="secondary">
+			Hi, I'm <b>Francis</b> or just <b>Franz</b> ! I'm a frontend web developer who is passionate about 
+			creating memorable user experiences through clean and elegant designs. 
+			I mainly use <b>AstroJS</b> and <b>React</b> for developing static websites, and dynamic websites respectively.
+		</p>
+		<p class="secondary">
+			Aside from web development, I also develop cool and fun games over on itch.io!
+		</p>
 		<!-- <h2 class="wg-lighter secondary">Education</h2> -->
 	</div>
 	<Projects />
