--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from 'astro:assets';
-import social1 from '@images/linkedin.png';
+import linkedIn from '@images/linkedin.png';
 import social2 from '@images/behance.png';
-import social3 from '@images/github.png';
+import github from '@images/github.png';
 ---
 
 <style>
@@ -11,13 +11,13 @@ import social3 from '@images/github.png';
 
 <div id="socials">
     <!-- <div>Follow Me: </div> -->
-    <a href="/">
-        <Image src={social1} alt="Social" />
+    <a href="https://www.linkedin.com/in/francistayag/" target="_blank" rel="noopener noreferrer">
+        <Image src={linkedIn} alt="Linked In" />
     </a>
-    <a href="/">
+    <!-- <a href="/">
         <Image src={social2} alt="Social" />
-    </a>
-    <a href="/">
-        <Image src={social3} alt="Social" />
+    </a> -->
+    <a href="https://github.com/zyenapz" target="_blank" rel="noopener noreferrer">
+        <Image src={github} alt="GitHub" />
     </a>
 </div>
