Add projects, minor changes to project presentation

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,8 +12,8 @@ import Layout from '@layouts/Layout.astro';
         <h1 class="line">Contact</h1>
         <h2 class="wg-lighter">E-mail</h2>
         <p class="secondary">Got any inquiries? Please send them to <a class="wg-bolder" href="mailto:someone@example.com">franztayag@gmail.com</a> via your e-mail client.</p>
-        <h2 class="wg-lighter">Social Media</h2>
-        <p class="secondary">Alternatively, you can reach me through my social media accounts: </p>
+        <h2 class="wg-lighter">Social Media / Other</h2>
+        <p class="secondary">Alternatively, you can reach me through my social media and other internet accounts: </p>
         <Socials />
     </div>
 </Layout>
