--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,6 +2,7 @@
 import { getCollection } from 'astro:content';
 // const projects = await Astro.glob('@content/projects/**/*.md')
 const projectEntries = await getCollection('projects');
+projectEntries.sort((a, b) => Date.parse(b.data.release) - Date.parse(a.data.release));
 
 // placeholders
 import { Image } from 'astro:assets';
@@ -20,17 +21,23 @@ import social3 from '@images/github.png';
         {projectEntries.map(entry => 
             <div class="list-item">
                 <div class="year">
-                    <p class="secondary">{entry.data.years}</p>
+                    <p class="secondary">{entry.data.release}</p>
                 </div>
                 <div class="list-info">
+                    
                     <h3><a href={`/projects/${entry.slug}`}>{entry.data.title}</a></h3>
-                    <p class="secondary">{entry.data.summary}</p>
-  
-                    <div id="techs">
-                        {entry.data.techs.map(tech => 
-                            <p class="tertiary">{tech}</p>
+                    <div id="roles">
+                        {entry.data.roles.map(role => 
+                            <p class="tertiary">{role}</p>
                         )}
                     </div>
+                    <p class="secondary">{entry.data.summary}</p>
+                    
+                        <div id="techs">
+                            {entry.data.techs.map(tech => 
+                                <p class="tertiary">{tech}</p>
+                            )}
+                        </div>      
                 </div>
                 
             </div>
