--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,9 @@ import Projects from '@components/Projects.astro';
 	<div id="about">
 		<h2 class="wg-lighter">About Me</h1>
 		<p class="secondary">
-			Hi, I'm <b>Francis</b> or just <b>Franz</b> ! I'm a new frontend web developer who is passionate about 
-			creating memorable user experiences through clean and elegant designs. 
-			I mainly use <b>AstroJS</b> and <b>React</b> for developing static websites, and dynamic websites respectively.
+			Hi, I'm <b>Francis</b> or just <b>Franz</b>! I'm a frontend web developer who is passionate about 
+			creating top-notch user experiences through clean and elegant designs. 
+			I mainly use <b>AstroJS</b> and <b>React</b> for developing static and dynamic websites, respectively.
 		</p>
 		<p class="secondary">
 			Aside from web development, I also develop cool and fun games over on 
