--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,5 +1,5 @@
 #projects {
-    margin-top: 3em;
+    margin-top: 1em;
 }
 
 .list-item {
@@ -14,7 +14,7 @@
 }
 
 .list-item:not(:first-child) {
-    margin: 3em auto;
+    margin: 2em auto;
 }
 
 .list-info h3 {
@@ -43,7 +43,6 @@
 }
 
 #techs {
-    margin-top: 0.75em;
     font-weight: lighter;
     color: var(--color2);
 }
@@ -52,7 +51,30 @@
     display: inline;
 }
 
+/* #techs p:first-child::before {
+    content: "\01F528";
+    color: transparent;  
+    text-shadow: 0 0 0 var(--black);
+} */
+
 #techs p:not(:last-child):after {
     content: "\25cf";
     margin-inline: 0.25em;
+}
+
+#roles {
+    display: inline-block;
+}
+
+#roles p {
+    display: inline;
+}
+
+#roles p:not(:last-child):after {
+    content: "\25cf";
+    margin-inline: 0.25em;
+}
+
+#roles p:first-child::before {
+    /* content: "\01F9D1"; */
 }
