Add content for Star Fighter - Also installed MDX

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Projects from '@components/Projects.astro';
 		<p class="secondary">
 			Hi, I'm <b>Francis</b> or just <b>Franz</b>! I'm a frontend web developer who is passionate about 
 			creating top-notch user experiences through clean and elegant designs. 
-			I mainly use <b>AstroJS</b> and <b>React</b> for developing static and dynamic websites, respectively.
+			I mainly use <b>AstroJS</b> and <b>React</b> for developing static and dynamic websites, respectively. For general purposes, I use <b>Python</b>. 
 		</p>
 		<p class="secondary">
 			Aside from web development, I also develop cool and fun games over on 
