--- a/src/styles/project_details.css
+++ b/src/styles/project_details.css
@@ -6,3 +6,29 @@
 article > h1 {
     text-align: center;
 }
+
+#gallery {
+    text-align: center;
+}
+
+img {
+    max-width: 30vmin;
+    height: auto;
+    display: inline-block;
+    margin-inline: 0.25em;
+    transition: transform 0.4s ease;
+}
+
+img:hover {
+    transform: scale(1.3);
+}
+
+@media only screen and (max-width: 640px) {
+    img {
+        max-width: 50vmin;
+        height: auto;
+        display: block;
+        margin-bottom: 0.5em;
+        margin-inline: auto;
+    }
+}
