Add design to project-details page

--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -39,8 +39,8 @@ const { Content } = await entry.render();
 
     <article>
       <h1>{entry.data.title}</h1>
-      <a href=`/projects/${prevSlug}`>Previous</a>
-      <a href=`/projects/${nextSlug}`>Next</a>
+      <!-- <a href=`/projects/${prevSlug}`>Previous</a>
+      <a href=`/projects/${nextSlug}`>Next</a> -->
       <Content />
     </article>
     
