--- a/src/styles/project_details.css
+++ b/src/styles/project_details.css
@@ -7,6 +7,11 @@ article > h1 {
     text-align: center;
 }
 
+p {
+    text-align: justify;
+    color: var(--color2);
+}
+
 #gallery {
     text-align: center;
 }
@@ -23,6 +28,37 @@ img:hover {
     transform: scale(1.3);
 }
 
+#summary {
+    display: flex;
+    color: var(--color2);
+    list-style: none;
+    margin-top: 1em;
+    margin-bottom: 2em;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0;
+}
+
+#summary .header {
+    font-weight: bolder;
+}
+
+#summary p:not(.header) {
+    color: var(--color1)
+}
+
+#summary div p {
+    text-align: center;
+    margin: 0.1em;
+}
+
+h1 {
+    font-size: 3em;
+    margin: 0;
+}
+
+
 @media only screen and (max-width: 640px) {
     img {
         max-width: 50vmin;
@@ -30,5 +66,8 @@ img:hover {
         display: block;
         margin-bottom: 0.5em;
         margin-inline: auto;
+    }
+    #summary div {
+        margin: 0.5em;
     }
 }
