Reworked image resizing for diff screen sizes

--- a/src/styles/project_details.css
+++ b/src/styles/project_details.css
@@ -17,7 +17,7 @@ p {
 }
 
 img {
-    max-width: 30vmin;
+    max-width: 20em;
     height: auto;
     display: inline-block;
     margin-inline: 0.25em;
@@ -61,7 +61,7 @@ h1 {
 
 @media only screen and (max-width: 640px) {
     img {
-        max-width: 50vmin;
+        max-width: 15em;
         height: auto;
         display: block;
         margin-bottom: 0.5em;
