--- a/src/styles/project_details.css
+++ b/src/styles/project_details.css
@@ -7,12 +7,17 @@ article > h1 {
     text-align: center;
 }
 
+article {
+    padding-bottom: 3em;
+}
+
 p {
     text-align: justify;
+    line-height: 1.5em;
     color: var(--color2);
 }
 
-#gallery {
+.gallery {
     text-align: center;
 }
 
@@ -28,16 +33,37 @@ img:hover {
     transform: scale(1.3);
 }
 
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+  
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+iframe.secondary {
+    width: 80%;
+    height: 80%;
+    margin: auto;
+}
+
 #summary {
     display: flex;
     color: var(--color2);
     list-style: none;
-    margin-top: 1em;
     margin-bottom: 2em;
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-    padding: 0;
 }
 
 #summary .header {
@@ -54,8 +80,10 @@ img:hover {
 }
 
 h1 {
+    font-family: "Now";
     font-size: 3em;
-    margin: 0;
+    margin: 0.5em 0;
+    text-transform: uppercase;
 }
 
 
@@ -70,4 +98,43 @@ h1 {
     #summary div {
         margin: 0.5em;
     }
+}
+
+
+.links {
+    display: flex;
+    justify-content: center;
+}
+
+.margin-top-m {
+    margin-top: 2em;
+}
+
+.margin-btm-m {
+    margin-bottom: 2em;
+}
+
+.links a {
+    display: inline;
+    float: left;
+    margin-inline: 5px;
+    transition: opacity 0.2s ease-in;
+}
+.links a:hover {
+    opacity: 50%;
+}
+
+.links a img {
+    display: block;
+    width: 3em;
+    height: auto;
+}
+
+.links a img:hover {
+    transform: scale(1);
+}
+
+.page-controls {
+    display: flex;
+    justify-content: space-between;
 }
